--- a/Quizz/style.css
+++ b/Quizz/style.css
@@ -42,7 +42,7 @@ h3 {
 }
 
 .btnT{
-  background-color: #e41a1a;
+  background-color:  #4ce908cb;
   color: #fff;
   border: 0;
   border-radius: 10px;
@@ -50,11 +50,11 @@ h3 {
   padding: 14px 40px;
   font-size: 16px;
   cursor: pointer;
-  justify-content: space-between;
+  margin-right: 5px;
 }
 
 .btnF{
-  background-color: #4ce908cb;
+  background-color: #e41a1a;;
   color: #fff;
   border: 0;
   border-radius: 10px;
@@ -62,7 +62,7 @@ h3 {
   padding: 14px 40px;
   font-size: 16px;
   cursor: pointer;
-  justify-content: space-between;
+  margin-left: 5px;
 }
 
 
@@ -72,4 +72,10 @@ h3 {
 
 .btn:focus {
   outline: 0;
+}
+
+.result {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #434543;
 }
