--- a/Carte à gratter/style.css
+++ b/Carte à gratter/style.css
@@ -5,7 +5,7 @@
 }
 body {
   height: 100vh;
-  background: linear-gradient(135deg, #c3a3f1, #6414e9);
+  background: linear-gradient(135deg, #b3e2db, #56f1ec);
 }
 .container {
   width: 31em;
