--- a/OTP generateur/style.css
+++ b/OTP generateur/style.css
@@ -5,16 +5,16 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-color: #1b76f2;
+  background-color: #ffffff;
 }
 .container {
-  background-color: #1a1820;
+  background-color: #138fdb;
   width: min(37.5em, 90%);
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  padding: 3em;
+  padding: 6em;
   border-radius: 0.5em;
 }
 h1 {
@@ -24,11 +24,11 @@ h1 {
 }
 button {
   font-size: 1em;
-  background-color: #1b76f2;
+  background-color: #032f4a;
   display: block;
   margin: 2em auto;
   padding: 1em;
-  color: #ffffff;
+  color: #fff;
   border: none;
   outline: none;
   border-radius: 0.3em;
@@ -36,9 +36,10 @@ button {
 }
 #otpDisplay {
   font-size: 1em;
-  background-color: #2a292e;
-  color: #ffffff;
+  background-color: #ffff;
+  color: #000000;
   letter-spacing: 1em;
   text-align: center;
   padding: 1em 0;
+  margin-top: 50px;
 }
